Added an option to upload 2 documents

--- a/mortgage-front/src/app/admin/task-edit/task-edit.component.html
+++ b/mortgage-front/src/app/admin/task-edit/task-edit.component.html
@@ -51,8 +51,8 @@
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
   
-        <button mat-raised-button color="primary" type="submit">Save</button>
-        <button mat-raised-button color="warn" (click)="cancel()">cancel</button>
+        <button mat-raised-button color="primary" type="submit">שמור</button>
+        <button mat-raised-button color="warn" (click)="cancel()">בטל</button>
       </form>
     </div>
   </div>
