--- a/mortgage-front/src/app/customer/documents-list-customer/documents-list-customer.component.css
+++ b/mortgage-front/src/app/customer/documents-list-customer/documents-list-customer.component.css
@@ -1,4 +1,3 @@
-/* סגנון כותרת הדף */
 .header-card {
   margin: 20px;
   background-color: #e3f2fd;
@@ -23,7 +22,6 @@
   color: #424242;
 }
 
-/* סגנון שדה החיפוש */
 .search-container {
   /* margin: 20px; */
   position: absolute;
@@ -37,16 +35,16 @@
 mat-form-field mat-icon {
   color: #1976d2;
 }
+
 .document-actions {
-  display: flex;
+  /* display: flex; */
   align-items: center;
 }
-/* סגנון לתוכן העיקרי */
+
 .content-container {
   margin: 20px;
 }
 
-/* סגנון כרטיסי המסמכים */
 .cards-container {
   display: flex;
   flex-wrap: wrap;
@@ -88,6 +86,7 @@ mat-card-actions {
   justify-content: flex-end;
   margin: 20px;
 }
+
 .no-docs-message {
   display: flex;
   justify-content: center;
@@ -100,16 +99,23 @@ mat-card-actions {
   color: #000;
   border-radius: 8px;
 }
-.document-name{
+
+.document-name {
   text-decoration: underline;
-  color:#1565c0;
+  color: #1565c0;
+  /* border: 1px solid;
+  border-radius: 8px;
+  background-color: #a5a4a430; */
+  /* box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.137); */
 }
-.document-name:hover{
+
+.document-name:hover {
   cursor: pointer;
   color: #0d47a1;
 }
- mat-checkbox {
-  position: absolute; 
+
+mat-checkbox {
+  position: absolute;
   top: 0;
   left: 0;
 }
@@ -117,28 +123,29 @@ mat-card-actions {
 .header-container {
   margin: 0 auto;
   width: 75vw;
-  background: linear-gradient(to right, #e3f2fd38, #bbdefb67); 
+  background: linear-gradient(to right, #e3f2fd38, #bbdefb67);
   padding: 20px;
-  border-radius: 8px; 
+  border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
   margin-bottom: 100px
 }
 
 .header-content {
-  text-align: center; 
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .header-title {
   font-size: 28px;
-  font-weight: 600; 
-  color: #0d47a1; 
-  margin: 0; 
+  font-weight: 600;
+  color: #0d47a1;
+  margin: 0;
 }
 
 .header-subtitle {
-  font-size: 18px; 
-  color: #1565c0; 
-  margin: 0; 
+  font-size: 18px;
+  color: #1565c0;
+  margin: 0;
 }
 
 .tips-container {
@@ -175,9 +182,17 @@ mat-card-actions {
   margin-bottom: 15px;
   line-height: 1.6;
 }
-.icon-button{
+
+.icon-button {
   /* position: absolute;
   bottom: 2px;
   left: 3px; */
   float: left;
+}
+
+.separator {
+  /* border: none; */
+  /* border-top: 1px solid #ccc; */
+  margin-right: 10px;
+  /* width: 100vw; */
 }
