--- a/mortgage-front/src/app/global/toolbar/toolbar.component.html
+++ b/mortgage-front/src/app/global/toolbar/toolbar.component.html
@@ -16,6 +16,20 @@
           matBadgeColor="warn">notifications</mat-icon>
       </button>
     }
+<!-- @if(this.display==true){
+  <notifications></notifications>
+} -->
+      <!-- @if(!this.loginService.isAdmin()){
+    <button mat-icon-button [matMenuTriggerFor]="notificationMenu" (click)="loadNotifications()">
+      <mat-icon [matBadge]="unreadNotificationsCount" [matBadgeHidden]="!hasUnreadNotifications"
+        matBadgeColor="warn">notifications</mat-icon>
+    </button>
+    <mat-menu #notificationMenu="matMenu" class="notification-menu">
+      <ng-template matMenuContent>
+        <notifications [notifications]="notifications" [unreadCount]="unreadNotificationsCount" (notificationRead)="onNotificationRead($event)"></notifications>
+      </ng-template>
+    </mat-menu>
+  } -->
       <!-- Document icon for pending documents -->
       <button mat-icon-button (click)="openDocuments()" matBadge="!" matBadgeSize="large" class="demo-section"
         matTooltip="ישנם מסמכים שהועלו ולא נשמרו" matTooltipPosition="below" *ngIf="hasPendingDocuments">
