Fixing small errors, and improving the design

--- a/mortgage-front/src/app/admin/customer-list/customer-list.component.html
+++ b/mortgage-front/src/app/admin/customer-list/customer-list.component.html
@@ -5,11 +5,12 @@
     <mat-icon matSuffix>search</mat-icon>
   </mat-form-field>
   <div id="main">
-
-
-    <!-- customers table -->
-    <div class="contents" style="padding: 25px;">
-      <h2>לקוחות</h2>
+    
+    <!-- אזור הלקוחות -->
+    <section class="contents" style="padding: 25px;">
+      <header>
+        <h2 class="component-title">רשימת לקוחות</h2> <!-- header  -->
+      </header>
       <table mat-table [dataSource]="customers" matSort class="mat-elevation-z8" dir="rtl">
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>שם</th>
@@ -60,15 +61,14 @@
       </table>
       <mat-paginator #customersPaginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons></mat-paginator>
       <br>
-      <button mat-fab color="primary" class="icon-button add" (click)="addCustomer()" matTooltip="הוספת לקוח חדש למערכת"
-        matTooltipPosition="above" style="bottom: -1vh;left: 1vw;z-index: 1000;">
-        <mat-icon class="icon">add</mat-icon>
-      </button>
       <export-to-excel [typeOfCustomer]="1"></export-to-excel>
-    </div>
-    <div class="contents" style="padding: 25px;">
-      <!-- archived table -->
-      <h2>לקוחות בארכיון</h2>
+    </section>
+
+    <!-- אזור הלקוחות בארכיון -->
+    <section class="contents" style="padding: 25px;">
+      <header>
+        <h2 class="component-title">רשימת לקוחות בארכיון</h2> <!-- header  -->
+      </header>
       <table mat-table [dataSource]="archivedCustomers" matSort class="mat-elevation-z8" dir="rtl">
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>שם</th>
@@ -120,10 +120,13 @@
       <mat-paginator #archivedCustomersPaginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons></mat-paginator>
 
       <export-to-excel [typeOfCustomer]="2"></export-to-excel>
-    </div>
-    <div class="contents" style="padding: 25px;">
-      <!--lead table-->
-      <h2>לידים</h2>
+    </section>
+
+    <!-- אזור הלידים -->
+    <section class="contents" style="padding: 25px;">
+      <header>
+        <h2 class="component-title">רשימת לידים</h2> <!-- header  -->
+      </header>
       <table mat-table [dataSource]="leads" matSort class="mat-elevation-z8" dir="rtl">
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>שם</th>
@@ -174,7 +177,11 @@
       </table>
       <mat-paginator #leadsPaginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons></mat-paginator>
       <br>
-      <export-to-excel [typeOfCustomer]="0"></export-to-excel>
-    </div>
+      <button mat-fab color="primary" class="icon-button add" (click)="addCustomer()" matTooltip="הוספת ליד חדש למערכת"
+        matTooltipPosition="above" style="bottom: 12vh;left: 3vw;z-index: 1000;position: fixed;">
+        <mat-icon class="icon">add</mat-icon>
+      </button>
+      <export-to-excel [typeOfCustomer]="3"></export-to-excel>
+    </section>
   </div>
 </div>
