--- a/mortgage-front/src/app/admin/user-list/user-list.component.html
+++ b/mortgage-front/src/app/admin/user-list/user-list.component.html
@@ -1,5 +1,7 @@
 <div class="mainAll">
 <div class="contents">
+    <h2 class="component-title">רשימת משתמשים</h2> <!-- header  -->
+
     <div class="form-field-div">
         <mat-form-field class="form-field" dir="rtl">
             <mat-label>חפש</mat-label>
