--- a/mortgage-front/src/app/customer/customer-portal/customer-portal.component.html
+++ b/mortgage-front/src/app/customer/customer-portal/customer-portal.component.html
@@ -1,6 +1,6 @@
 <div id="mainPage">
     <app-toolbar></app-toolbar>
     <navigation-menu [componentsList]="componentArrayOfCustomer"></navigation-menu>
-    <footer> </footer>
+    <app-footer> </app-footer>
 
 </div>
