--- a/mortgage-front/src/app/shared/document-type-list/document-type-list.component.css
+++ b/mortgage-front/src/app/shared/document-type-list/document-type-list.component.css
@@ -14,3 +14,10 @@
 :host {
   background-color: transparent;
 }
+.component-title {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-align: right;
+  color: #333; 
+}
