--- a/mortgage-front/src/app/shared/document-type-list/document-type-list.component.html
+++ b/mortgage-front/src/app/shared/document-type-list/document-type-list.component.html
@@ -1,6 +1,6 @@
 <div class="mainAll">
-<p>רשימת סוגי המסמכים </p>
-<div id="content" >
+  <h2 class="component-title">רשימת סוגי המסמכים</h2> <!-- header  -->
+  <div id="content" >
   
     <mat-form-field dir="rtl">
       <mat-label>חפש</mat-label>
