--- a/mortgage-front/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/mortgage-front/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,6 @@
 <div >
     <app-toolbar></app-toolbar>
     <navigation-menu [componentsList]="componentArrayOfAdmin"></navigation-menu>
-    <footer> </footer>
+    <app-footer> </app-footer>
 
 </div>
