--- a/mortgage-front/src/app/admin/customer-list/customer-list.component.scss
+++ b/mortgage-front/src/app/admin/customer-list/customer-list.component.scss
@@ -2,6 +2,7 @@
   .mat-table {
     padding: 1px !important;
     font-size: 12px !important;
+    
   }
 
 
@@ -47,3 +48,10 @@ th {
   background-color: transparent;
 }
 
+.component-title {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-align: right;
+  color: #333; 
+}
