--- a/mortgage-front/src/app/admin/user-list/user-list.component.css
+++ b/mortgage-front/src/app/admin/user-list/user-list.component.css
@@ -58,3 +58,10 @@ th {
 :host {
   background-color: transparent;
 }
+.component-title {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-align: right;
+  color: #333; 
+}
