--- a/mortgage-front/src/app/auth/login/login.component.scss
+++ b/mortgage-front/src/app/auth/login/login.component.scss
@@ -66,9 +66,11 @@
 
 .text-muted {
   color: #6c757d;
+  text-decoration: underline;
 }
 .text-muted:hover{
   cursor: pointer;
+  color: rgb(0, 0, 134);
 }
 :host {
   background-color: transparent;
